--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -25,7 +25,9 @@ body {
   }
   
   a:hover {
-    background-color: #ccc;
+    background-color: orange;
+    border-radius: 15px;
+    border-style: solid;
   }
   
   ul {
@@ -35,3 +37,24 @@ body {
   li {
     margin: 0.25em;
   }
+
+h1 {
+  font: inherit;
+  color: inherit;
+  letter-spacing: -0.05em;
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
+
+h2 > a {
+  font-size: 0.75em;
+}
+
+input {
+  display: block;
+  margin: 5px 0 20px 0;
+  padding: 9px;
+  border: solid 1px black;
+  width: 300px;
+}
+
