--- a/backend/templates/post_list.html
+++ b/backend/templates/post_list.html
@@ -1,12 +1,14 @@
+{% extends 'base.html' %}
 {% block content %}
-<h1>Detailed List of Posts</h1>
+<h1>Full List of Dirt Factoids</h1>
 <h1><a href="/">Homepage</a></h1>
 {% for post in posts %}
-<h4>Post Title: {{ post.title }}</h4>
+<h4>Factoid Title: {{ post.title }}</h4>
 <h4>Author: {{ post.author }}</h4>
-<h4>Post Body: {{ post.body }}</h4>
+<h4>Factoid Content: {{ post.body }}</h4>
 <h6>Post ID # {{post.id}}</h6>
 <nav>
-  <a href="{% url 'post_edit' pk=post.id %}">Edit Post</a>
+  <a href="{% url 'post_view' pk=post.id %}">View Factoid</a>
+  <a href="{% url 'post_edit' pk=post.id %}">Edit Factoid</a>
 </nav>
 {% endfor %} {% endblock %}
